<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="dark_theme">Темная тема</string>
    <string name="course_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="mail_of_recipient">mak351218@gmail.com</string>
    <string name="theme_of_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="link_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="input_hint">Поиск</string>
    <string name="share_link">Поделиться:</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="problems_with_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="track_time">Длительность</string>
    <string name="toast_error_intent">Невозможно выполнить действие</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="empty_playlist">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name_playlist">Название*</string>
    <string name="description_playlist">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaves_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="nope">Нет</string>
    <string name="yep">Да</string>
    <string name="Ok">Ок</string>
    <string name="playlist_created_success">Плейлист %1$s успешно создан</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="present_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="create">Создать</string>
    <string name="playlist_updated_success">Плейлист %1$s успешно обновлен</string>
    <string name="min1">минута</string>
    <string name="min2_4">минуты</string>
    <string name="min5">минут</string>
    <string name="track1">трек</string>
    <string name="track2_4">трека</string>
    <string name="track5">треков</string>
    <string name="do_you_want_delete">Хотите удалить трек?</string>
    <string name="do_you_want_delete_pl">Хотите удалить плейлист</string>
    <string name="empty_list">В этом плейлисте нет списка треков, которым можно поделиться</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>