<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/arrowback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrowback"
            android:background="@android:color/transparent"
            android:layout_marginStart="@dimen/sixteen_dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/twenty_four_dp"
            android:textSize="@dimen/twenty_four_sp"
            android:text="@string/settings"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixty_four_dp"
        android:layout_marginTop="@dimen/twenty_four_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_gravity="start|center_vertical"
            android:text="@string/dark_theme"
            android:textSize="@dimen/sixteen_sp"
            android:textColor="@color/black"
            android:gravity="center"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="12dp"
            android:checked="false"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixty_four_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_gravity="start|center_vertical"
            android:text="@string/share"
            android:textSize="@dimen/sixteen_sp"
            android:textColor="@color/black"
            android:gravity="center"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:src="@drawable/ic_share"
            android:background="@android:color/transparent"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixty_four_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_gravity="start|center_vertical"
            android:text="@string/support"
            android:textSize="@dimen/sixteen_sp"
            android:textColor="@color/black"
            android:gravity="center"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/sixteen_sp"
            android:src="@drawable/ic_support"
            android:background="@android:color/transparent"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixty_four_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_gravity="start|center_vertical"
            android:text="@string/agreement"
            android:textSize="@dimen/sixteen_sp"
            android:textColor="@color/black"
            android:gravity="center"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:src="@drawable/ic_arrowforward"
            android:background="@android:color/transparent"
            />
    </FrameLayout>
</LinearLayout>
