<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/sixteen_dp"
    android:background="@color/background_blue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingTop="@dimen/sixteen_dp"
        android:text="Playlist maker"
        android:textColor="@color/white"
        android:textSize="@dimen/twenty_four_sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textSize="@dimen/twenty_four_sp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/sixteen_dp"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/eight_dp"
            app:iconTint="@color/black"
            />

        <Button
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:backgroundTint="@color/white"
            android:text="@string/media_library"
            android:textSize="@dimen/twenty_four_sp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/sixteen_dp"
            app:icon="@drawable/ic_medialibrary"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/eight_dp"
            app:iconTint="@color/black"
            />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textSize="@dimen/twenty_four_sp"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/sixteen_dp"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/eight_dp"
            app:iconTint="@color/black"
            />
    </LinearLayout>
</LinearLayout>
