<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/arrowback"
            style="@style/ArrowBackImageButtonActivityMain" />

        <TextView
            style="@style/TextStyleTitleActivity"
            android:text="@string/search" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingHorizontal="@dimen/sixteen_dp">

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/thirty_six_dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_corner_edit_text"
            android:backgroundTint="@color/background_hint"
            android:drawableStart="@drawable/ic_search_16"
            android:drawablePadding="@dimen/four_dp"
            android:drawableTint="@color/hint"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/input_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/twelve_dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textCursorDrawable="@drawable/cursor"
            android:textFontWeight="400" />

        <ImageButton
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="@dimen/twelve_dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_clear_button_16"
            android:visibility="gone"
            app:tint="@color/hint" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/placeholderLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeholderErrorImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/one_hundred_dp"
            tools:src="@drawable/error_search" />

        <TextView
            android:id="@+id/placeholderErrorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/twenty_four_dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:layout_marginBottom="@dimen/twenty_four_dp"
            android:layout_weight="400"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:textColor="@color/day_dark_and_night_white"
            android:textSize="@dimen/nineteen_sp"
            tools:text="@string/nothing_found" />

        <Button
            android:id="@+id/updateQueryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="500"
            android:backgroundTint="@color/day_dark_and_night_white"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/refresh"
            android:textAllCaps="false"
            android:textColor="@color/day_white_and_night_dark"
            android:textSize="@dimen/fourteen_sp"
            android:visibility="gone"
            app:cornerRadius="@dimen/fifty_two" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTrackListXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>
