<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioplayerActivity">

    <ImageButton
        android:id="@+id/arrowback"
        style="@style/ArrowBackImageButtonActivityMain"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/twenty_four_dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/twenty_four_dp" />

    <ImageView
        android:id="@+id/placeholderTrack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_placeholder_312_x_312"
        app:layout_constraintBottom_toTopOf="@id/nameTrackData"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@id/endGuideLine2"
        app:layout_constraintStart_toEndOf="@id/startGuideLine2"
        app:layout_constraintTop_toBottomOf="@id/arrowback"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/nameTrackData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_four_dp"
        android:ellipsize="marquee"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:textColor="@color/day_dark_and_night_white"
        android:textFontWeight="400"
        android:textSize="@dimen/twenty_two_sp"
        app:layout_constraintBottom_toTopOf="@id/singerTrackData"
        app:layout_constraintEnd_toStartOf="@id/endGuideLine2"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/startGuideLine2"
        app:layout_constraintTop_toBottomOf="@id/placeholderTrack"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/singerTrackData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twelve_dp"
        android:ellipsize="marquee"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:textColor="@color/day_dark_and_night_white"
        android:textFontWeight="400"
        android:textSize="@dimen/fourteen_sp"
        app:layout_constraintBottom_toTopOf="@id/playTrack"
        app:layout_constraintEnd_toStartOf="@id/endGuideLine2"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/startGuideLine2"
        app:layout_constraintTop_toBottomOf="@id/nameTrackData"
        tools:text="The Beatles" />

    <ImageButton
        android:id="@+id/addTrack"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_add_track_in_media_button"
        app:layout_constraintBottom_toBottomOf="@id/playTrack"
        app:layout_constraintEnd_toStartOf="@id/playTrack"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/startGuideLine2"
        app:layout_constraintTop_toTopOf="@id/playTrack" />

    <ImageButton
        android:id="@+id/playTrack"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/twenty_eight_dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_play_track_button"
        app:layout_constraintBottom_toTopOf="@id/timePlayTrack"
        app:layout_constraintEnd_toStartOf="@id/favoriteTrack"
        app:layout_constraintStart_toEndOf="@id/addTrack"
        app:layout_constraintTop_toBottomOf="@id/singerTrackData" />

    <ImageButton
        android:id="@+id/favoriteTrack"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_favorite_track_button"
        app:layout_constraintBottom_toBottomOf="@id/playTrack"
        app:layout_constraintEnd_toStartOf="@id/endGuideLine2"
        app:layout_constraintStart_toEndOf="@id/playTrack"
        app:layout_constraintTop_toTopOf="@id/playTrack" />

    <TextView
        android:id="@+id/timePlayTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/four_dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/day_dark_and_night_white"
        android:textSize="@dimen/fourteen_sp"
        app:layout_constraintBottom_toTopOf="@id/timeTrack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playTrack"
        tools:text="0:30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/sixteen_dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/sixteen_dp" />

    <TextView
        android:id="@+id/timeTrack"
        style="@style/NameOfTrackData"
        android:layout_marginTop="@dimen/forty_dp"
        android:text="@string/track_time"
        app:layout_constraintBottom_toTopOf="@id/albumTrack"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/timePlayTrack" />

    <TextView
        android:id="@+id/albumTrack"
        style="@style/NameOfTrackData"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@id/yearTrack"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/timeTrack" />

    <TextView
        android:id="@+id/yearTrack"
        style="@style/NameOfTrackData"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@id/genreTrack"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/albumTrack" />

    <TextView
        android:id="@+id/genreTrack"
        style="@style/NameOfTrackData"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@id/countryTrack"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/yearTrack" />

    <TextView
        android:id="@+id/countryTrack"
        style="@style/NameOfTrackData"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_marginBottom="@dimen/twenty_eight_dp"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/genreTrack" />

    <TextView
        android:id="@+id/timeTrackData"
        style="@style/TrackData"
        app:layout_constraintBaseline_toBaselineOf="@id/timeTrack"
        app:layout_constraintEnd_toStartOf="@id/endGuideLine"
        app:layout_constraintStart_toEndOf="@id/timeTrack"
        app:layout_constraintTop_toBottomOf="@id/timePlayTrack"
        tools:text="5:35" />

    <TextView
        android:id="@+id/albumTrackData"
        style="@style/TrackData"
        app:layout_constraintBaseline_toBaselineOf="@id/albumTrack"
        app:layout_constraintEnd_toStartOf="@id/endGuideLine"
        app:layout_constraintStart_toEndOf="@id/albumTrack"
        app:layout_constraintTop_toBottomOf="@id/timeTrackData"
        tools:text="Yesterday (remastered 2009)" />

    <TextView
        android:id="@+id/yearTrackData"
        style="@style/TrackData"
        app:layout_constraintBaseline_toBaselineOf="@id/yearTrack"
        app:layout_constraintEnd_toStartOf="@id/endGuideLine"
        app:layout_constraintStart_toEndOf="@id/yearTrack"
        app:layout_constraintTop_toBottomOf="@id/albumTrackData"
        tools:text="1965" />

    <TextView
        android:id="@+id/genreTrackData"
        style="@style/TrackData"
        app:layout_constraintBaseline_toBaselineOf="@id/genreTrack"
        app:layout_constraintEnd_toStartOf="@id/endGuideLine"
        app:layout_constraintStart_toEndOf="@id/genreTrack"
        app:layout_constraintTop_toBottomOf="@id/yearTrackData"
        tools:text="Rock" />

    <TextView
        android:id="@+id/countryTrackData"
        style="@style/TrackData"
        app:layout_constraintBaseline_toBaselineOf="@id/countryTrack"
        app:layout_constraintEnd_toStartOf="@id/endGuideLine"
        app:layout_constraintStart_toEndOf="@id/countryTrack"
        app:layout_constraintTop_toBottomOf="@id/genreTrackData"
        tools:text="Великобритания" />

</androidx.constraintlayout.widget.ConstraintLayout>